<resources>
    <string name="app_name">To Do</string>
    <string name="toDoList">To Do</string>
    <string name="manageCategory">Manage category</string>
    <string name="history">History</string>
    <string name="rateUS">Rate us</string>
    <string name="shareApp">Share app</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="settings">Settings</string>
    <string name="task">Enter task</string>
    <string name="setDate">Set Date</string>
    <string name="setTime">Set time</string>
    <string name="addToCategory">Add to Category</string>
    <string name="whatDone">What is to be Done?</string>
    <string name="dueDate">Set date and time</string>
    <string name="toolTask">Task</string>
    <string name="addCategory">Add category</string>
    <string name="toolbarTitleManageCategory">Manage Category</string>
    <string name="deleteDialgoTitleCategory">Delete Category!</string>
    <string name="deleteCategoryMsg">Do you want to delete this category?</string>
    <string name="deleteCatSuccess">Category deleted</string>
    <string name="pleaseEnterCategory">Enter category to add</string>
    <string name="categoryAdded">Category added</string>
    <string name="editCatTitle">Edit Category</string>
    <string name="updateCatMsg">Update category name</string>
    <string name="catUpdated">Category updated</string>
    <string name="pleaseEnterTask">Please enter task</string>
    <string name="taskSaveSuccess">Task save successfully</string>
    <string name="taskUpdateSuccess">Task updated successfully</string>
    <string name="dialogTitleDelete">Delete Task!</string>
    <string name="dialogMsgDelete">Do you want to delete this Task?</string>
    <string name="taskDeleted">Task deleted</string>
    <string name="addFirstTask">\"Add your first task\"</string>
    <string name="delete">Delete</string>
    <string name="taskTitle">Task title</string>
    <string name="enterTaskTitle">Enter task title</string>
    <string name="pleaseEnterTaskTitle">Please enter task title</string>
    <string name="dialogTitleSave">Save task!</string>
    <string name="dialogMsgSave">Do you want to save this task?</string>
    <string name="dialogTitleUpdate">Update Task!</string>
    <string name="dialogMsgUpdate">Do you want to update this task?</string>
    <string name="taskList">Task List</string>
    <string name="finish">Finish</string>
    <string name="dialogTitleFinish">Task Finish!</string>
    <string name="dialogMsgFinish">Is this task is finish?</string>
    <string name="noHistory">No history to Display!</string>
    <string name="toolHistory">History</string>
    <string name="unFinish">Unfinish</string>
    <string name="dialogTitleUnFinish">Task Unfinish!</string>
    <string name="dialogMsgUnFinish">Mark this task as unfinish?</string>
</resources>
