<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/menuToDoList"
            android:icon="@drawable/ic_assignment_black_24dp"
            android:title="@string/toDoList" />
        <item
            android:id="@+id/menuManageCategory"
            android:icon="@drawable/ic_list_black_24dp"
            android:title="@string/manageCategory" />
        <item
            android:id="@+id/menuHistory"
            android:icon="@drawable/ic_history_black_24dp"
            android:title="@string/history" />
    </group>

    <item android:title="Communicate">
        <menu>
            <item
                android:id="@+id/menuRateUs"
                android:icon="@drawable/ic_grade_black_24dp"
                android:title="@string/rateUS" />
            <item
                android:id="@+id/menuShareApp"
                android:icon="@drawable/ic_menu_share"
                android:title="@string/shareApp" />
        </menu>
    </item>
</menu>